# claude-code-modular-prompts

./: .coveragerc  .gitignore  .mcp.json  .pre-commit-config.yaml  .transformation-implementation-log.md  100-STEP-FINALIZATION-PLAN.md  14-STEP-OPTIMIZATION-STRATEGY.md  8-STEP-EXECUTION-TEMPLATE.md  ADAPTATION-GUIDE.md  ADAPTIVE-DAG-IMPLEMENTATION-PLAN.md  AGENT_11_SECURITY_VALIDATION_REPORT.md  AGENT_14_COMPLETION_REPORT.md  ARCHITECTURAL_CONSTRAINTS.md  ARCHITECTURE-OVERVIEW.md  AUTONOMOUS-EXECUTION-COMPLETE.md  CHANGELOG.md  CHANGELOG_V2.0.0.md  CHECKLIST-EXECUTION-LOG.md  CLAUDE-CODE-AGENT-ORCHESTRATION-PLAN.md  CLAUDE-CODE-CONVERTER-REPORT.md  CLAUDE-CODE-V2-EXECUTION-PLAN.md  CLAUDE-CONTEXT-ARCHITECT-MASTER-PLAN.md  CLAUDE.md  CLAUDE.md.backup  CLAUDE_CODE_EVALUATION_RESULTS.md  CLAUDE_CODE_INTEGRATION_FIX.md  CLEANUP-AND-MIGRATION-STRATEGY.md  COMMAND-CONTEXT-LOADING-EXAMPLE.md  COMMAND-TEMPLATE-EXAMPLE.md  COMMAND_CERTIFICATION_REPORT.md  COMPREHENSIVE-CONTEXT-CLEANUP-PLAN.md  COMPREHENSIVE-PLACEHOLDER-REFERENCE-GUIDE.md  CONSOLIDATED-PLAN-EXECUTIVE-SUMMARY.md  CONTRIBUTING.md  CONVERSION-CHECKLIST-TEMPLATE.md  CRITICAL-ARCHITECTURE-MISMATCH.md  CURRENT-STATE-BASELINE.md  DEPLOYMENT-READINESS-ASSESSMENT.md  DEPLOYMENT-VALIDATION-RESULTS.md  DEPLOYMENT_RISK_ASSESSMENT.md  (+213 more)
.archive/: FUNCTIONAL-TESTING-REPORT.md  PLACEHOLDER-AGENT-MISSION-REPORT.md  PLACEHOLDER-SECURITY-VALIDATION-REPORT.md  (+3 more)
.archive-integration-approach/: LEARNING.md  claude.local.md.archived  claude.todos.md.archived
.archive-smart-onboarding/: ARCHIVE-SUMMARY.md  LESSONS-LEARNED.md
(+6079 files in other folders)
